force-app/main/default/objects/Loan_Modification__c/Loan_Modification__c.object-meta.xml
<CustomObject>
    <label>Loan Modification</label>
    <nameField>
        <label>Loan Modification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Modifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>