force-app/main/default/objects/Loan_Modification__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Comments related to this Loan Modification</description>
    <label>Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>