force-app/main/default/objects/Loan_Modification__c/fields/Extension_Fee__c.field-meta.xml
<CustomField>
    <fullName>Extension_Fee__c</fullName>
    <label>Extension Fee (%)</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>