force-app/main/default/objects/Loan_Modification__c/fields/Loan_Mod_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Mod_Type__c</fullName>
    <label>Loan Mod Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LOC Increase</fullName>
            </value>
            <value>
                <fullName>LOC Decrease</fullName>
            </value>
            <value>
                <fullName>LOC Extension</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>