force-app/main/default/objects/Loan_Modification__c/fields/Mod_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Mod_Effective_Date__c</fullName>
    <inlineHelpText>Date that this Loan Modification is approved</inlineHelpText>
    <label>Mod Effective Date</label>
    <type>Date</type>
</CustomField>