force-app/main/default/objects/Loan_Modification__c/fields/Modification_Fee_Percent__c.field-meta.xml
<CustomField>
    <fullName>Modification_Fee_Percent__c</fullName>
    <label>Modification Fee %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>