force-app/main/default/objects/Loan_Modification__c/fields/Modification_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Modification_Maturity_Date__c</fullName>
    <label>Updated Maturity Date</label>
    <type>Date</type>
</CustomField>