force-app/main/default/objects/Loan_Modification__c/fields/Previous_Active_States__c.field-meta.xml
<CustomField>
    <fullName>Previous_Active_States__c</fullName>
    <label>Previous Active States</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>