force-app/main/default/objects/Loan_Modification__c/fields/Previous_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Expiration_Date__c</fullName>
    <inlineHelpText>The Expiration Date prior to this Loan Modification</inlineHelpText>
    <label>Previous Expiration Date</label>
    <type>Date</type>
</CustomField>