force-app/main/default/objects/Loan_Modification__c/fields/Previous_Index_Margin__c.field-meta.xml
<CustomField>
    <fullName>Previous_Index_Margin__c</fullName>
    <label>Previous Index Margin</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>