force-app/main/default/objects/Loan_Modification__c/fields/Previous_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Previous_Interest_Rate__c</fullName>
    <inlineHelpText>The Interest Rate prior to this Loan Modification</inlineHelpText>
    <label>Previous Interest Rate</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>