force-app/main/default/objects/Loan_Modification__c/fields/Previous_LOC_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Previous_LOC_Commitment__c</fullName>
    <inlineHelpText>The LOC Commitment prior to this Loan Modification</inlineHelpText>
    <label>Previous LOC Commitment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>