force-app/main/default/objects/Loan_Modification__c/fields/Previous_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Maturity_Date__c</fullName>
    <inlineHelpText>Line Maturity Date prior to this Loan Modification</inlineHelpText>
    <label>Previous Maturity Date</label>
    <type>Date</type>
</CustomField>