force-app/main/default/objects/Loan_Modification__c/fields/Previous_Max_LTV__c.field-meta.xml
<CustomField>
    <fullName>Previous_Max_LTV__c</fullName>
    <label>Previous Max LTV %</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>