force-app/main/default/objects/Loan_Modification__c/fields/Previous_Total_ARV_LTV__c.field-meta.xml
<CustomField>
    <fullName>Previous_Total_ARV_LTV__c</fullName>
    <label>Previous Total ARV LTV</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>