force-app/main/default/objects/Loan_Modification__c/fields/Updated_Active_States__c.field-meta.xml
<CustomField>
    <fullName>Updated_Active_States__c</fullName>
    <label>Updated Active States</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>