force-app/main/default/objects/Loan_Modification__c/fields/Updated_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Updated_Expiration_Date__c</fullName>
    <label>Updated Expiration Date</label>
    <type>Date</type>
</CustomField>