force-app/main/default/objects/Loan_Modification__c/fields/Updated_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Updated_Interest_Rate__c</fullName>
    <label>Updated Interest Rate</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>