force-app/main/default/objects/Loan_Modification__c/fields/Updated_LOC_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Updated_LOC_Commitment__c</fullName>
    <label>Updated LOC Commitment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>